# emulators

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  release-please-config.json  skills-lock.json  tsconfig.json  tsconfig.tsbuildinfo  turbo.json  vite.config.ts  wrangler.jsonc
.agents/skills/sofa/: SKILL.md
.agents/skills/sofa-contribute/: SKILL.md
.agents/skills/sofa-status/: SKILL.md
.github/workflows/: ci.yml  release-build.yml  release-please.yml
apps/EmuApp/: Info.plist  Package.swift  README.md
apps/EmuApp/Sources/CEmuNative/: shim.c
apps/EmuApp/Sources/EmuApp/: App.swift  AppSettings.swift  Attachments.swift  Audio.swift  EmuHub.swift  EmuSystem.swift  Emulator.swift  Input.swift  Keybindings.swift  Library.swift  LibraryView.swift  PlayerView.swift  SaveStore.swift  ScreenView.swift  SettingsView.swift  Upscaler.swift
apps/WinApp/: App.xaml  App.xaml.cs  Audio.cs  EmuNative.cs  Input.cs  MainWindow.xaml  MainWindow.xaml.cs  WinApp.csproj
apps/desktop/: Cargo.toml
apps/desktop/src/: main.rs
apps/docs/: index.html  package.json  tsconfig.json  vite.config.ts  wrangler.jsonc
apps/docs/src/: App.tsx  cores.ts  index.css  matrices.ts
apps/docs/src/ui/: BulletPanel.tsx  CoreCard.tsx  CorePage.tsx  Formats.tsx  GamesTable.tsx  HomePage.tsx  Layout.tsx  MaturityPill.tsx  Section.tsx  SpecRow.tsx  SupportMatrix.tsx  YesNo.tsx
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/public/: manifest.webmanifest
apps/web/src/: assets.d.ts  emulator.ts  main.tsx  savestate.ts
apps/web/src/io/: cheats.ts  duoLink.ts  keypad.ts  sio-signal.ts  (+2 more)
core/: Cargo.toml
core-atari2600/: Cargo.toml
core-atari2600/src/: atari.rs  bus.rs  cart.rs
core-atari2600/src/tia/: audio.rs
core-ffi/: Cargo.toml
core-ffi/src/: lib.rs
core-gbc/: CONTRACT.md  Cargo.toml
core-gbc/src/: apu.rs  bus.rs  crash.rs  dma.rs  emulator.rs  joypad.rs  lib.rs  ppu.rs  regions.rs  serial.rs  timer.rs  wasm.rs
core-gbc/src/cpu/: exec.rs  mod.rs  state.rs
core-gbc/src/memory/: mod.rs
core-gc/: Cargo.toml
core-gc/src/: gc.rs  mem.rs  regions.rs
core-genesis/src/: lib.rs  m68k.rs  vdp.rs  z80.rs
core-n64/: Cargo.toml
core-n64/src/: pi.rs  si.rs
core-n64/src/cpu/: state.rs
core-native/: Cargo.toml
core-native/include/: emu_native.h
core-native/src/: lib.rs
core-nds/: CONTRACT.md  Cargo.toml
core-nds/src/: lib.rs  nds.rs  wasm.rs
core-nds/src/bios/: hle.rs  mod.rs  nitro_os.rs
core-nds/src/cart/: cart.rs  header.rs  loader.rs  mod.rs  overlays.rs
core-nds/src/cpu/: arm.rs  exec.rs  mod.rs  shifter.rs  thumb.rs
core-nds/src/io/: dma.rs  ds_math.rs  ipc.rs  irq.rs  rtc.rs  sound.rs  spi.rs  timers.rs  touch.rs
core-nds/src/memory/: bus7.rs  bus9.rs  mod.rs  vram_router.rs
core-nds/src/ppu/: affine_bg.rs  bitmap_bg.rs  engine_a.rs  gx_lighting.rs  mod.rs  ppu.rs  sprites.rs  text_bg.rs
core-nes/: Cargo.toml
core-nes/src/: apu.rs  cpu.rs  lib.rs  nes.rs
core-ngpc/src/: video.rs  wasm.rs
core-ngpc/src/cpu/: alu.rs  bus.rs  state.rs
core-pce/: Cargo.toml
core-pce/src/: cart.rs  cpu.rs  psg.rs
core-ps1/: CONTRACT.md  Cargo.toml
core-ps1/examples/: boot_probe.rs
core-ps1/src/: bios.rs  bus.rs  cdrom.rs  dma.rs  gpu.rs  gte.rs  irq.rs  lib.rs  mdec.rs  psx.rs  regions.rs  sio.rs  spu.rs  timers.rs  wasm.rs
core-ps1/src/cpu/: cop0.rs  exec.rs  state.rs
core-sms/src/: lib.rs  psg.rs  sms.rs  wasm.rs
core-snes/src/: apu.rs  bus.rs  cart.rs  crash.rs  input.rs
core-snes/src/apu/: spc.rs
core-virtualboy/src/: bus.rs  cpu.rs  vsu.rs
core-wonderswan/: Cargo.toml
core-wonderswan/src/: cpu.rs  crash.rs
core-xbox/demos/: README.md
core-xbox/examples/: boot_probe.rs  make_test_xbe.rs
core-xbox/src/: bus.rs  crash.rs  hle.rs  hle_table.rs  lib.rs  nv2a.rs  nv2a_render.rs  wasm.rs  xbox.rs  xiso.rs
core-xbox/src/cpu/: exec.rs  mod.rs
core/pkg/: gba_core.d.ts  gba_core.js  gba_core_bg.wasm  gba_core_bg.wasm.d.ts
core/src/: arm.rs  bios.rs  bus.rs  cpu.rs  eeprom.rs  emulator.rs  home.rs  irq.rs  lib.rs  nds.rs  ppu.rs  savestate.rs  sound.rs  sram.rs  thumb.rs  wasm.rs
memory/: MEMORY.md  agent-task-sizing.md  crash-screens.md  docs-app.md  gamecube-core.md  ps1-biosless-strategy.md
public/: cheats-gba.json  manifest.webmanifest  sw.js
scripts/: build-android.sh  build-ios.sh  build-libretro.sh  build-macos.sh  gen-cheats.ts
src/: emulator.js  emulator.ts  index.css  main.js  main.ts  main.tsx  savestate.ts  worker.ts
src/bios/: hle.js  hle.ts
src/cpu/: arm.js  arm.ts  cpu.js  cpu.ts  shifter.js  state.js  thumb.js  thumb.ts
src/io/: dma.js  io.js  io.ts  irq.js  irq.ts  keypad.js  sound.js  sound.ts  timers.js
src/memory/: bus.js  bus.ts  eeprom.ts  flash.js  flash.ts  regions.js  rtc.js  rtc.ts  saveDetect.ts  sram.ts
src/ppu/: composite.js  composite.ts  modes_affine.js  modes_bitmap.js  modes_bitmap.ts  modes_text.js  modes_text.ts  ppu.js  sprites.js  sprites.ts
src/recomp/: compiler.js  compiler.ts  wasm-emit.js  wasm-emit.ts
src/test/: batch.ts  bg.test.ts  boot.ts  composite.test.ts  cpu.test.ts  dma.test.ts  eeprom.test.ts  io.test.ts  jit-lockstep.ts  link-debug.ts  recomp-arm.test.ts  recomp-bench.test.ts  recomp.test.ts  roms.ts  rtc.test.ts  saveDetect.test.ts  savestate.test.ts  screenshot.ts  sprites.test.ts  thumb.test.ts  timers.test.ts  trade-debug.ts
src/ui/: App.js  App.tsx  Atari2600Player.tsx  CartArt.tsx  CheatsPanel.tsx  ConfirmModal.tsx  ControllerPanel.js  ControllerPanel.tsx  CoverCard.tsx  CoverImage.tsx  DebugPanel.tsx  EmuContext.tsx  Gamepad.js  Gamepad.tsx  GbcPlayer.tsx  GenesisPlayer.tsx  HomeScreen.tsx  LibraryPage.tsx  LogPane.js  LogPane.tsx  N64Player.tsx  NdsPlayer.tsx  NesPlayer.tsx  NgpcPlayer.tsx  PcePlayer.tsx  PlayerPage.tsx  Ps1Player.tsx  RomDetailsPage.tsx  RomLibrary.js  RomLibrary.tsx  Screen.js  Screen.tsx  SettingsPanel.tsx  SmsPlayer.tsx  SnesPlayer.tsx  VirtualBoyPlayer.tsx  WonderSwanPlayer.tsx  XboxPlayer.tsx  audio.js  audio.ts  (+19 more)
src/ui/hooks/: useXboxBios.ts
(+46 files in other folders)
