[package]
name = "emu-native"
version = "0.0.0"
edition = "2021"

# Unified native FFI for the whole emulator: a single C ABI (`emu_*`) over an
# opaque handle that wraps every core (GBA/PS1/NDS/NES/SMS+GG/GBC/Xbox). Built as
# a static archive for linking into native apps — primarily the macOS SwiftPM app
# under `apps/EmuApp`, which exists so large media (e.g. a 4.7 GB Xbox disc) can
# be handled outside the browser's 4 GB wasm32 address space. Sibling of the
# iOS-only `core-ffi` (GBA only); this one is multi-core and macOS-first.
[lib]
name = "emu_native"
crate-type = ["staticlib", "rlib"]

[dependencies]
gba-core = { path = "../core" }
ps1-core = { path = "../core-ps1" }
nds-core = { path = "../core-nds" }
nes-core = { path = "../core-nes" }
sms-core = { path = "../core-sms" }
gbc-core = { path = "../core-gbc" }
xbox-core = { path = "../core-xbox" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
