[package]
name = "pce-core"
version = "0.0.0"
edition = "2021"

# Pure-Rust NEC PC Engine / TurboGrafx-16 core, built from-scratch against the
# public hardware documentation (Charles MacDonald's PC Engine notes, the
# Archaic Pixels / pcedev wiki, and the HuC6280 datasheet) — there is no source
# to port. The PC Engine pairs a Hudson HuC6280 (a 65C02 with a banking MMU,
# block-transfer instructions, ST VDC-write ops, and a built-in 6-channel
# wavetable PSG + timer) with a HuC6270 VDC (video display controller) and a
# HuC6260 VCE (color encoder / 9-bit GRB palette).
#
# Builds as a normal rlib for host-side `cargo test`; the web target layers a
# wasm-bindgen surface on top. The core stays binding-agnostic.
[lib]
crate-type = ["cdylib", "rlib"]

# wasm-bindgen is only used by the `target_arch="wasm32"` `wasm` module, so it's
# a wasm-only dependency. Native builds (host `cargo test`) never pull it.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[profile.release]
opt-level = 3
lto = true
# One codegen unit lets LLVM optimize across the whole interpreter.
codegen-units = 1
# No unwinding — a panic in the emulator is unrecoverable anyway. (cargo test
# runs the dev profile, so #[should_panic] still works.)
panic = "abort"

# Optimize the release wasm harder than wasm-pack's default `-O`.
[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O3']

[dev-dependencies]

[dependencies]
