[package]
name = "ps1-core"
version = "0.0.0"
edition = "2021"

# From-scratch PlayStation 1 (PSX) core, built from nocash's psx-spx hardware
# spec. Sibling of the GBA (`../core`) and NDS cores. This phase lands the
# MIPS R3000A register/exception foundation + the memory map + bus only — no
# instruction execution or sub-device behavior yet (those are todo!() seams).
#
# Builds as a normal rlib for host-side `cargo test`; the web target layers a
# wasm-bindgen surface (`src/wasm.rs`) on top, exactly like the GBA core.
[lib]
crate-type = ["cdylib", "rlib"]

# wasm-bindgen is only used by the `target_arch="wasm32"` `wasm` module, so it's
# a wasm-only dependency. Native builds (host `cargo test`) never pull it.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[profile.release]
opt-level = 3
lto = true
# One codegen unit lets LLVM optimize across the whole interpreter (no per-unit
# boundaries blocking inlining of the now-monomorphized bus accesses).
codegen-units = 1
# No unwinding — a panic in the emulator is unrecoverable anyway. Drops the
# landing-pad tables, shrinking the binary and trimming the hot paths. (cargo
# test runs the dev profile, so #[should_panic] still works.)
panic = "abort"

# Optimize the release wasm harder than wasm-pack's default `-O`.
[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O3']

[dev-dependencies]

[dependencies]
