[package]
name = "gba-core"
version = "0.0.0"
edition = "2021"

# Pure-Rust GBA core, ported 1:1 from the TypeScript core in ../src.
# Builds as a normal rlib for host-side `cargo test` (the differential
# harness compares it against the TS oracle); a wasm-bindgen surface is
# layered on later for the web target.
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Web target only — the macro is invoked solely in the target_arch="wasm32"
# `wasm` module, so host `cargo test` never touches it.
wasm-bindgen = "0.2"

[profile.release]
opt-level = 3
lto = true

[dev-dependencies]
